[package]
name = "hello-world"
version = "0.1.0"
authors = ["neunyan <soundrabbitstd@gmail.com>"]
edition = "2018"
description = "examples of kagura"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SoundRabbit/kagura-example"
homepage = "https://github.com/SoundRabbit/kagura-example"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
kagura="0.7.1"